lkt/bootstrap/src/liblktlang.h


typedef struct
{
   uint64_t serial_number;
} *lkt_analysis_context;
typedef struct
{
   uint64_t version_number;
} *lkt_analysis_unit;
typedef struct lkt_base_node__struct *lkt_base_node;
typedef enum {
        lkt_argument = 1,
        lkt_lexer_case_rule_cond_alt = 2,
        lkt_lexer_case_rule_default_alt = 3,
        lkt_match_branch = 4,
        lkt_pattern_match_branch = 5,
        lkt_block_expr_clause = 6,
        lkt_block_string_line = 7,
        lkt_class_qualifier_absent = 8,
        lkt_class_qualifier_present = 9,
        lkt_grammar_rule_decl = 10,
        lkt_synthetic_lexer_decl = 11,
        lkt_node_decl = 12,
        lkt_self_decl = 13,
        lkt_binding_val_decl = 14,
        lkt_enum_lit_decl = 15,
        lkt_field_decl = 16,
        lkt_fun_param_decl = 17,
        lkt_lambda_param_decl = 18,
        lkt_dyn_var_decl = 19,
        lkt_match_val_decl = 20,
        lkt_val_decl = 21,
        lkt_fun_decl = 22,
        lkt_env_spec_decl = 23,
        lkt_error_decl = 24,
        lkt_generic_decl = 25,
        lkt_grammar_decl = 26,
        lkt_lexer_decl = 27,
        lkt_lexer_family_decl = 28,
        lkt_synth_fun_decl = 29,
        lkt_synth_param_decl = 30,
        lkt_any_type_decl = 31,
        lkt_enum_class_alt_decl = 32,
        lkt_function_type = 33,
        lkt_generic_param_type_decl = 34,
        lkt_class_decl = 35,
        lkt_enum_class_decl = 36,
        lkt_enum_type_decl = 37,
        lkt_struct_decl = 38,
        lkt_trait_decl = 39,
        lkt_decl_annotation = 40,
        lkt_decl_annotation_args = 41,
        lkt_dyn_env_wrapper = 42,
        lkt_elsif_branch = 43,
        lkt_enum_class_case = 44,
        lkt_excludes_null_absent = 45,
        lkt_excludes_null_present = 46,
        lkt_any_of = 47,
        lkt_array_literal = 48,
        lkt_call_expr = 49,
        lkt_logic_predicate = 50,
        lkt_logic_propagate_call = 51,
        lkt_bin_op = 52,
        lkt_block_expr = 53,
        lkt_cast_expr = 54,
        lkt_dot_expr = 55,
        lkt_error_on_null = 56,
        lkt_generic_instantiation = 57,
        lkt_grammar_cut = 58,
        lkt_grammar_discard = 59,
        lkt_grammar_dont_skip = 60,
        lkt_grammar_list = 61,
        lkt_grammar_null = 62,
        lkt_grammar_opt = 63,
        lkt_grammar_opt_error = 64,
        lkt_grammar_opt_error_group = 65,
        lkt_grammar_opt_group = 66,
        lkt_grammar_or_expr = 67,
        lkt_grammar_pick = 68,
        lkt_grammar_implicit_pick = 69,
        lkt_grammar_predicate = 70,
        lkt_grammar_rule_ref = 71,
        lkt_grammar_skip = 72,
        lkt_grammar_stop_cut = 73,
        lkt_parse_node_expr = 74,
        lkt_token_lit = 75,
        lkt_token_no_case_lit = 76,
        lkt_token_pattern_concat = 77,
        lkt_token_pattern_lit = 78,
        lkt_token_ref = 79,
        lkt_id = 80,
        lkt_def_id = 81,
        lkt_module_ref_id = 82,
        lkt_ref_id = 83,
        lkt_if_expr = 84,
        lkt_isa = 85,
        lkt_keep_expr = 86,
        lkt_lambda_expr = 87,
        lkt_big_num_lit = 88,
        lkt_char_lit = 89,
        lkt_null_lit = 90,
        lkt_num_lit = 91,
        lkt_block_string_lit = 92,
        lkt_single_line_string_lit = 93,
        lkt_pattern_single_line_string_lit = 94,
        lkt_logic_assign = 95,
        lkt_logic_expr = 96,
        lkt_logic_propagate = 97,
        lkt_logic_unify = 98,
        lkt_match_expr = 99,
        lkt_not_expr = 100,
        lkt_paren_expr = 101,
        lkt_raise_expr = 102,
        lkt_subscript_expr = 103,
        lkt_try_expr = 104,
        lkt_un_op = 105,
        lkt_full_decl = 106,
        lkt_grammar_list_sep = 107,
        lkt_import = 108,
        lkt_langkit_root = 109,
        lkt_lexer_case_rule = 110,
        lkt_lexer_case_rule_send = 111,
        lkt_list_kind_one = 112,
        lkt_list_kind_zero = 113,
        lkt_argument_list = 114,
        lkt_base_lexer_case_rule_alt_list = 115,
        lkt_base_match_branch_list = 116,
        lkt_block_string_line_list = 117,
        lkt_call_expr_list = 118,
        lkt_decl_annotation_list = 119,
        lkt_elsif_branch_list = 120,
        lkt_enum_class_alt_decl_list = 121,
        lkt_enum_class_case_list = 122,
        lkt_enum_lit_decl_list = 123,
        lkt_expr_list = 124,
        lkt_any_of_list = 125,
        lkt_full_decl_list = 126,
        lkt_decl_block = 127,
        lkt_generic_param_decl_list = 128,
        lkt_fun_param_decl_list = 129,
        lkt_grammar_expr_list = 130,
        lkt_grammar_expr_list_list = 131,
        lkt_import_list = 132,
        lkt_lambda_param_decl_list = 133,
        lkt_lkt_node_list = 134,
        lkt_pattern_detail_list = 135,
        lkt_pattern_list = 136,
        lkt_ref_id_list = 137,
        lkt_type_ref_list = 138,
        lkt_synthetic_type_ref_list = 139,
        lkt_null_cond_qualifier_absent = 140,
        lkt_null_cond_qualifier_present = 141,
        lkt_op_amp = 142,
        lkt_op_and = 143,
        lkt_op_div = 144,
        lkt_op_eq = 145,
        lkt_op_gt = 146,
        lkt_op_gte = 147,
        lkt_op_logic_and = 148,
        lkt_op_logic_or = 149,
        lkt_op_lt = 150,
        lkt_op_lte = 151,
        lkt_op_minus = 152,
        lkt_op_mult = 153,
        lkt_op_ne = 154,
        lkt_op_or = 155,
        lkt_op_or_int = 156,
        lkt_op_plus = 157,
        lkt_any_type_pattern = 158,
        lkt_binding_pattern = 159,
        lkt_bool_pattern_false = 160,
        lkt_bool_pattern_true = 161,
        lkt_ellipsis_pattern = 162,
        lkt_extended_pattern = 163,
        lkt_filtered_pattern = 164,
        lkt_integer_pattern = 165,
        lkt_list_pattern = 166,
        lkt_not_pattern = 167,
        lkt_null_pattern = 168,
        lkt_or_pattern = 169,
        lkt_paren_pattern = 170,
        lkt_regex_pattern = 171,
        lkt_tuple_pattern = 172,
        lkt_type_pattern = 173,
        lkt_field_pattern_detail = 174,
        lkt_property_pattern_detail = 175,
        lkt_selector_pattern_detail = 176,
        lkt_selector_call = 177,
        lkt_default_list_type_ref = 178,
        lkt_function_type_ref = 179,
        lkt_generic_type_ref = 180,
        lkt_simple_type_ref = 181,
        lkt_var_bind = 182,
} lkt_node_kind_enum;
typedef struct {
   int length;
   int ref_count;
   uint32_t content[1];
} *lkt_string_type;
typedef uint8_t lkt_bool;
typedef struct {
    uint32_t line;
    uint16_t column;
} lkt_source_location;
typedef struct {
    lkt_source_location start;
    lkt_source_location end;
} lkt_source_location_range;
typedef struct {
    uint32_t *chars;
    size_t length;
    int is_allocated;
} lkt_text;
typedef struct {
    lkt_source_location_range sloc_range;
    lkt_text message;
} lkt_diagnostic;
    typedef struct {
            uint32_t value;
            lkt_bool has_error;
            lkt_source_location error_sloc;
            lkt_string_type error_message;
    } lkt_internal_decoded_char_value;
    typedef struct {
            lkt_internal_metadata md;
            lkt_env_rebindings_type rebindings;
            lkt_bool from_rebound;
    } lkt_internal_entity_info;
    typedef struct {
            lkt_base_node node;
            lkt_internal_entity_info info;
    } lkt_node;
typedef struct lkt_event_handler__struct *lkt_event_handler;
typedef void (*lkt_event_handler_unit_requested_callback)(
   void *data,
   lkt_analysis_context context,
   lkt_text *name,
   lkt_analysis_unit from,
   lkt_bool found,
   lkt_bool is_not_found_error
);
typedef void (*lkt_event_handler_destroy_callback)(void *data);
typedef void (*lkt_event_handler_unit_parsed_callback)(
   void *data,
   lkt_analysis_context context,
   lkt_analysis_unit unit,
   lkt_bool reparsed
);
typedef struct lkt_file_reader__struct *lkt_file_reader;
typedef void (*lkt_file_reader_destroy_callback)(void *data);
typedef void (*lkt_file_reader_read_callback)(
   void *data,
   const char *filename,
   const char *charset,
   int read_bom,
   lkt_text *buffer,
   lkt_diagnostic *diagnostic
);
typedef struct lkt_unit_provider__struct *lkt_unit_provider;
extern int
lkt_unit_populate_lexical_env(
    lkt_analysis_unit unit
);
extern void
lkt_create_bare_entity(
    lkt_base_node node,
    lkt_node *entity
);
extern lkt_node_kind_enum
lkt_node_kind(lkt_node *node);
extern void
lkt_kind_name(lkt_node_kind_enum kind, lkt_text *result);
extern lkt_analysis_unit
lkt_node_unit(lkt_node *node);
extern uint32_t
lkt_node_hash(lkt_node *node);
extern lkt_bool
lkt_node_is_equivalent(lkt_node *l, lkt_node *r);
extern int
lkt_node_is_token_node(lkt_node *node);
extern int
lkt_node_is_synthetic(lkt_node *node);
extern void
lkt_node_image(lkt_node *node,
                               lkt_text *result);
extern void
lkt_node_text(lkt_node *node,
                              lkt_text *text);
extern void
lkt_node_sloc_range(lkt_node *node,
                                    lkt_source_location_range *sloc_range);
extern void
lkt_lookup_in_node(lkt_node *node,
                                   const lkt_source_location *sloc,
                                   lkt_node *result_p);
extern unsigned
lkt_node_children_count(lkt_node *node);
extern int
lkt_node_child(lkt_node *node,
                               unsigned n,
                               lkt_node* child_p);
extern char *
lkt_text_to_locale_string(lkt_text *text);
extern void
lkt_text_to_utf8(lkt_text *text,
                                 char **bytes,
                                 size_t *length);
extern void
lkt_text_from_utf8(const char *bytes,
                                   size_t length,
                                   lkt_text *text);
extern void
lkt_char_to_utf8(uint32_t codepoint,
                                 char **bytes,
                                 size_t *length);
extern void
lkt_char_from_utf8(const char *bytes,
                                   size_t length,
                                   uint32_t *codepoint);
extern void
lkt_string_to_utf8(lkt_string_type string,
                                   char **bytes,
                                   size_t *length);
extern void
lkt_string_from_utf8(const char *bytes,
                                     size_t length,
                                     lkt_string_type *string);
extern lkt_event_handler
lkt_create_event_handler(
   void *data,
   lkt_event_handler_destroy_callback destroy_func,
   lkt_event_handler_unit_requested_callback unit_requested_func,
   lkt_event_handler_unit_parsed_callback unit_parsed_func
);
extern void
lkt_dec_ref_event_handler(lkt_event_handler self);
extern lkt_file_reader
lkt_create_file_reader(
   void *data,
   lkt_file_reader_destroy_callback destroy_func,
   lkt_file_reader_read_callback read_func
);
extern void
lkt_dec_ref_file_reader(lkt_file_reader self);
extern void
lkt_dec_ref_unit_provider(void *data);