lkt/bootstrap/src/liblktlang-implementation-c.ads


   function lkt_unit_populate_lexical_env
     (Unit : lkt_analysis_unit
   ) return int
      with Export        => True,
           Convention    => C,
           External_name => "lkt_unit_populate_lexical_env";
   --  Create lexical environments for this analysis unit, according to the
   --  specifications given in the language spec.
   --
   --  If not done before, it will be automatically called during semantic
   --  analysis. Calling it before enables one to control where the latency
   --  occurs.
   --
   --  Depending on whether errors are discarded (see
   --  ``Discard_Errors_In_Populate_Lexical_Env``), return ``0`` on failure and
   --  ``1`` on success.

   ---------------------------------
   -- General AST node primitives --
   ---------------------------------

   procedure lkt_create_bare_entity
     (Node   : lkt_base_node;
      Entity : access lkt_node)
      with Export        => True,
           Convention    => C,
           External_name => "lkt_create_bare_entity";
   --  Create an entity with null entity info for a given node.

   function lkt_is_equivalent
     (L, R : lkt_node_Ptr) return lkt_bool
      with Export        => True,
           Convention    => C,
           External_name => "lkt_node_is_equivalent";
   --  Return whether the two nodes are equivalent.

   function lkt_hash
     (Node : lkt_node_Ptr) return uint32_t
      with Export        => True,
           Convention    => C,
           External_name => "lkt_node_hash";
   --  Return a hash for the given node.

   function lkt_node_kind
     (Node : lkt_node_Ptr) return lkt_node_kind_enum
      with Export        => True,
           Convention    => C,
           External_name => "lkt_node_kind";
   --  Return the kind of this node.

   procedure lkt_kind_name
     (Kind : lkt_node_kind_enum; Result : access lkt_text)
      with Export        => True,
           Convention    => C,
           External_name => "lkt_kind_name";
   --  Helper for textual dump: return the kind name for this node. The
   --  returned string is a copy and thus must be free'd by the caller.

   function lkt_node_unit
     (Node : lkt_node_Ptr) return lkt_analysis_unit
      with Export => True,
           Convention => C,
           External_Name => "lkt_node_unit";
   --  Return the analysis unit that owns this node.

   function lkt_is_token_node
     (Node : lkt_node_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "lkt_node_is_token_node";
   --  Return whether this node is a node that contains only a single token.

   function lkt_is_synthetic
     (Node : lkt_node_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "lkt_node_is_synthetic";
   --  Return whether this node is synthetic.

   procedure lkt_node_image
     (Node : lkt_node_Ptr; Result : access lkt_text)
      with Export        => True,
           Convention    => C,
           External_name => "lkt_node_image";
   --  Return a representation of this node as a string.

   procedure lkt_node_text
     (Node : lkt_node_Ptr;
      Text : access lkt_text)
      with Export, Convention => C,
           External_Name      => "lkt_node_text";
   --  Return the source buffer slice corresponding to the text that spans
   --  between the first and the last tokens of this node.
   --
   --  Note that this returns the empty string for synthetic nodes.

   procedure lkt_node_sloc_range
     (Node         : lkt_node_Ptr;
      Sloc_Range_P : access lkt_source_location_range)
      with Export        => True,
           Convention    => C,
           External_name => "lkt_node_sloc_range";
   --  Return the spanning source location range for this node.
   --
   --  Note that this returns the sloc of the parent for synthetic nodes.

   procedure lkt_lookup_in_node
     (Node   : lkt_node_Ptr;
      Sloc   : lkt_source_location;
      Result : lkt_node_Ptr)
      with Export        => True,
           Convention    => C,
           External_name => "lkt_lookup_in_node";
   --  Return the bottom-most node from in ``Node`` and its children which
   --  contains ``Sloc``, or ``NULL`` if there is none.

   function lkt_node_children_count
     (Node : lkt_node_Ptr) return unsigned
      with Export        => True,
           Convention    => C,
           External_name => "lkt_node_children_count";
   --  Return the number of children in this node.

   function lkt_node_child
     (Node    : lkt_node_Ptr;
      N       : unsigned;
      Child_P : lkt_node_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "lkt_node_child";
   --  Return the Nth child for in this node's fields and store it into
   --  ``*child_p``.  Return zero on failure (when ``N`` is too big).

   function lkt_text_to_locale_string
     (Text : lkt_text) return System.Address
      with Export        => True,
           Convention    => C,
           External_name => "lkt_text_to_locale_string";
   --  Encode some text using the current locale. The result is dynamically
   --  allocated: it is up to the caller to free it when done with it.
   --
   --  This is a development helper to make it quick and easy to print token
   --  and diagnostic text: it ignores errors (when the locale does not support
   --  some characters). Production code should use real conversion routines
   --  such as libiconv's in order to deal with UTF-32 texts.

   procedure lkt_text_to_utf8
     (Text   : lkt_text;
      Bytes  : out chars_ptr;
      Length : out size_t)
      with Export        => True,
           Convention    => C,
           External_name => "lkt_text_to_utf8";
   --  Encode some text to a newly allocated UTF-8 buffer (``bytes``). The size
   --  of this buffer is stored in ``length``, and the actual allocated buffer
   --  has one extra NUL byte (note that it is valid for the first ``length``
   --  bytes in ``bytes`` to contain NUL bytes).

   procedure lkt_text_from_utf8
     (Bytes  : chars_ptr;
      Length : size_t;
      Text   : out lkt_text)
      with Export        => True,
           Convention    => C,
           External_name => "lkt_text_from_utf8";
   --  Decode a UTF-8 buffer (``bytes``, of size ``length``) to a text buffer.

   procedure lkt_char_to_utf8
     (Char   : Unsigned_32;
      Bytes  : out chars_ptr;
      Length : out size_t)
      with Export        => True,
           Convention    => C,
           External_name => "lkt_char_to_utf8";
   --  Encode the given character to a newly allocated UTF-8 buffer
   --  (``bytes``). The size of this buffer is stored in ``length``.

   procedure lkt_char_from_utf8
     (Bytes  : chars_ptr;
      Length : size_t;
      Char   : out Unsigned_32)
      with Export        => True,
           Convention    => C,
           External_name => "lkt_char_from_utf8";
   --  Decode a UTF-8 buffer (``bytes``, of size ``length``) to a text buffer.
   --  Note that the UTF-8 buffer is supposed to contain only one codepoint.

   procedure lkt_string_to_utf8
     (Str    : lkt_string_type;
      Bytes  : out chars_ptr;
      Length : out size_t)
      with Export        => True,
           Convention    => C,
           External_name => "lkt_string_to_utf8";
   --  Encode some string to a newly allocated UTF-8 buffer (``bytes``). The
   --  size of this buffer is stored in ``length``, and the actual allocated
   --  buffer has one extra NUL byte (note that it is valid for the first
   --  ``length`` bytes in ``bytes`` to contain NUL bytes).

   procedure lkt_string_from_utf8
     (Bytes  : chars_ptr;
      Length : size_t;
      Str    : out lkt_string_type)
      with Export        => True,
           Convention    => C,
           External_name => "lkt_string_from_utf8";
   --  Decode a UTF-8 buffer (``bytes``, of size ``length``) to a string
   --  buffer.

   ------------------
   -- File readers --
   ------------------

   function lkt_create_file_reader
     (Data         : System.Address;
      Destroy_Func : lkt_file_reader_destroy_callback;
      Read_Func    : lkt_file_reader_read_callback) return lkt_file_reader
      with Export        => True,
           Convention    => C,
           External_name => "lkt_create_file_reader";
   --  Create a file reader. When done with it, the result must be passed to
   --  ``lkt_dec_ref_file_reader``.
   --
   --  Pass as ``data`` a pointer to hold your private data: it will be passed
   --  to all callbacks below.
   --
   --  ``destroy`` is a callback that is called by ``lkt_dec_ref_file_reader``
   --  to leave a chance to free resources that ``data`` may hold.
   --
   --  ``read`` is a callback. For a given filename/charset and whether to read
   --  the BOM (Byte Order Mark), it tries to fetch the contents of the source
   --  file, returned in ``Contents``. If there is an error, it must return it
   --  in ``Diagnostic`` instead.

   procedure lkt_dec_ref_file_reader
     (File_Reader : lkt_file_reader)
      with Export        => True,
           Convention    => C,
           External_name =>
              "lkt_dec_ref_file_reader";
   --  Release an ownership share for this file reader. This destroys the file
   --  reader if there are no shares left.

   


   --------------------
   -- Event handlers --
   --------------------

   function lkt_create_event_handler
     (Data                : System.Address;
      Destroy_Func        : lkt_event_handler_destroy_callback;
      Unit_Requested_Func : lkt_event_handler_unit_requested_callback;
      Unit_Parsed_Func    : lkt_event_handler_unit_parsed_callback)
      return lkt_event_handler
      with Export        => True,
           Convention    => C,
           External_name => "lkt_create_event_handler";
   --  Create an event handler. When done with it, the result must be passed to
   --  ``lkt_dec_ref_event_handler``.
   --
   --  Pass as ``data`` a pointer to hold your private data: it will be passed
   --  to all callbacks below.
   --
   --  ``destroy`` is a callback that is called by
   --  ``lkt_dec_ref_event_handler`` to leave a chance to free resources that
   --  ``data`` may hold. ``NULL`` can be passed if nothing needs to be done.
   --
   --  ``unit_requested`` is a callback that will be called when a unit is
   --  requested.
   --
   --  .. warning:: Please note that the unit requested callback can be called
   --     *many* times for the same unit, so in all likeliness, those events
   --     should be filtered if they're used to forward diagnostics to the
   --     user.
   --
   --  ``unit_parsed`` is a callback that will be called when a unit is parsed.

   procedure lkt_dec_ref_event_handler
     (Handler : lkt_event_handler)
      with Export        => True,
           Convention    => C,
           External_name =>
              "lkt_dec_ref_event_handler";
   --  Release an ownership share for this event handler. This destroys the
   --  event handler if there are no shares left.

   


   --------------------
   -- Unit providers --
   --------------------

   procedure lkt_dec_ref_unit_provider
     (Provider : lkt_unit_provider)
      with Export        => True,
           Convention    => C,
           External_name =>
              "lkt_dec_ref_unit_provider";
   --  Release an ownership share for this unit provider. This destroys the
   --  unit provider if there are no shares left.

   


   ------------------
   -- Struct types --
   ------------------

         



subtype lkt_internal_decoded_char_value is Internal_Decoded_Char_Value;
type lkt_internal_decoded_char_value_Ptr is access Internal_Decoded_Char_Value;
